--- a/templates/accounts/admin_dashboard.html
+++ b/templates/accounts/admin_dashboard.html
@@ -39,9 +39,25 @@
     </div>
     <h2 class="mb-4">
         <i class="fas fa-tachometer-alt me-2"></i>Platform Overview
-        <a href="{% url 'logged_in_home' %}" class="btn btn-outline-warning float-end">
-            <i class="fas fa-home me-1"></i>Back to Home
-        </a>
+        {% if user.is_authenticated %}
+            {% if user.is_superuser %}
+                <a href="{% url 'admin_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% elif user.user_type == 'LANDOWNER' %}
+                <a href="{% url 'user_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% elif user.user_type == 'FARMER' %}
+                <a href="{% url 'farmer_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% elif user.user_type == 'WORKER' %}
+                <a href="{% url 'worker_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% elif user.user_type == 'INVESTOR' %}
+                <a href="{% url 'investor_home' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% elif user.user_type == 'STUDENT' %}
+                <a href="{% url 'student_dashboard' %}" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% else %}
+                <a href="/" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+            {% endif %}
+        {% else %}
+            <a href="/" class="btn btn-light"><i class="fas fa-home me-1"></i>Back to Home</a>
+        {% endif %}
     </h2>
     <div class="row mb-4">
         <div class="col-md-3 mb-3">
