--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,25 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
-            <a class="navbar-brand" href="/"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+            {% if user.is_authenticated %}
+                {% if user.is_superuser %}
+                    <a class="navbar-brand" href="{% url 'admin_dashboard' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% elif user.user_type == 'LANDOWNER' %}
+                    <a class="navbar-brand" href="{% url 'landowner_home' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% elif user.user_type == 'FARMER' %}
+                    <a class="navbar-brand" href="{% url 'farmer_home' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% elif user.user_type == 'WORKER' %}
+                    <a class="navbar-brand" href="{% url 'worker_home' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% elif user.user_type == 'INVESTOR' %}
+                    <a class="navbar-brand" href="{% url 'investor_home' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% elif user.user_type == 'STUDENT' %}
+                    <a class="navbar-brand" href="{% url 'student_home' %}"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% else %}
+                    <a class="navbar-brand" href="/"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+                {% endif %}
+            {% else %}
+                <a class="navbar-brand" href="/"><i class="fas fa-seedling me-2"></i>FarmCom</a>
+            {% endif %}
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,6 +100,12 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <footer class="footer mt-auto py-3 bg-light border-top">
+        <div class="container text-center">
+            <span class="text-muted">Copyright &copy; {% now 'Y' %} - <strong>AHAJAH CREO</strong>, <em>A penchant for zero to one</em></span>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
