--- a/templates/farming/project_list.html
+++ b/templates/farming/project_list.html
@@ -5,6 +5,13 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1><i class="fas fa-tractor me-2"></i>Farming Projects</h1>
+    {% if user.is_authenticated %}
+        {% if user.user_type == 'FARMER' or user.is_superuser %}
+            <a href="{% url 'start_project' %}" class="btn btn-primary">
+                <i class="fas fa-plus me-2"></i>Start New Project
+            </a>
+        {% endif %}
+    {% endif %}
 </div>
 
 <div class="row">
