--- a/templates/lands/land_list.html
+++ b/templates/lands/land_list.html
@@ -6,9 +6,11 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1><i class="fas fa-map-marked-alt me-2"></i>Available Lands</h1>
     {% if user.is_authenticated %}
-        <a href="{% url 'add_land' %}" class="btn btn-success">
-            <i class="fas fa-plus me-2"></i>Add New Land
-        </a>
+        {% if user.user_type == 'LANDOWNER' or user.is_superuser %}
+            <a href="{% url 'add_land' %}" class="btn btn-success">
+                <i class="fas fa-plus me-2"></i>Add New Land
+            </a>
+        {% endif %}
     {% endif %}
 </div>
 
@@ -159,9 +161,11 @@
                     {% endif %}
                 </p>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'add_land' %}" class="btn btn-success">
-                        <i class="fas fa-plus me-2"></i>List Your Land
-                    </a>
+                    {% if user.user_type == 'LANDOWNER' or user.is_superuser %}
+                        <a href="{% url 'add_land' %}" class="btn btn-success">
+                            <i class="fas fa-plus me-2"></i>List Your Land
+                        </a>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
